<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="#66CC81"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">


        <!-- Pavadinimas Vardas ir pavarde -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">


            <TextView
                android:id="@+id/textView_pavadinimas"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="@string/pavadinimas"/>

            <EditText
                android:id="@+id/editText_vardas_ir_pavarde"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="wrap_content"
                android:hint="@string/pav_hint"
                android:inputType="textPersonName"/>

        </LinearLayout>

        <!-- Padalinys -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_padalinys"
                android:layout_width="0dp"
                android:layout_weight="0.3"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="@string/padalinys"/>

            <AutoCompleteTextView
                android:id="@+id/autoCompleteTextView_padaliniai"
                android:layout_width="0dp"
                android:layout_weight="0.7"
                android:layout_height="48dp"
                android:paddingHorizontal="8dp"
                android:paddingVertical="8dp"
                android:hint="@string/pad_hint"/>
        </LinearLayout>

        <!-- Sudetingumas -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView_sudetingumas"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:paddingHorizontal="10dp"
                android:text="@string/sudetingumas"/>

            <RatingBar
                android:id="@+id/ratingBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:numStars="4"
                android:rating="1"
                android:stepSize="1"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#36593F"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <!-- Laiko pasirinkimas -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView_laikas"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/laikas"/>

            <TimePicker
                android:id="@+id/timePicker"
                android:layout_width="140dp"
                android:layout_height="wrap_content"
                android:timePickerMode="spinner"/>
        </LinearLayout>

        <!-- Datos pasirinkimas -->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">
            <TextView
                android:id="@+id/textView_data"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/data"/>

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:calendarViewShown="false"
                android:datePickerMode="spinner"/>
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="#36593F"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <!-- Miesto pasirinkimas -->

        <TextView
            android:id="@+id/textView_miestas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/miestas"/>

        <Spinner
            android:id="@+id/spinner_miestas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:background="@android:drawable/btn_dropdown"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:background="#8A8A8A">

        <!-- Registruoti jungiklis -->

        <TextView
            android:id="@+id/textView_registruoti"
            android:layout_width="0dp"
            android:layout_weight="0.3"
            android:layout_height="wrap_content"
            android:text="@string/registruoti"/>

        <Switch
            android:id="@+id/switch_busena"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:minHeight="48dp"
            android:paddingHorizontal="8dp"
                tools:ignore="UseSwitchCompatOrMaterialXml"/>

        <!-- Išsaugojimo mygtukas -->

        <Button
            android:id="@+id/button_saugoti"
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:text="@string/saugoti"/>

    </LinearLayout>
</LinearLayout>
